--- a/gen.html
+++ b/gen.html
@@ -529,10 +529,8 @@
 
     <script>
         // =========================================================
-        //    	       KONFIGURACJA CLOUDINARY - ZMIEŃ TO!
-        // =========================================================
-        const CLOUD_NAME = 'xxxxxx';           // <--- ZMIEŃ NA SWÓJ KLUCZ
-        const UPLOAD_PRESET = 'xxxxx'; // <--- ZMIEŃ NA SWÓJ KLUCZ
+        const CLOUD_NAME = 'dm6diek2j';          
+        const UPLOAD_PRESET = 'hujasjgagjakghaghaghjkashjkasghujkasghjk'; // 
         // =========================================================
         
         const form = document.getElementById('dataGenerator');
